2014-10-09  Georg-Johann Lay  <avr@gjlay.de>

	More elaborate exit stati with quiet operation (-q).
	Show usage with -h or --help.

	* README (-q): Document exit stati.
	* avrtest.c (exit_status_text): Initialize EXIT_STATUS_FILE,
	EXIT_STATUS_MEMORY with "ABORTED".
	(is_avrtest_log): New const.
	(leave): Don't print runtime statistics if failing.
	[options.do_quiet]: Return exit status 10, 11, 12, 13, 42 as
	documented in README.
	(get_mem): New function.
	* load-flash.c (load_elf): Leave with EXIT_STATUS_FILE if something
	is wrong with the executable file.
	(load_symbol_string_table): Same.  And call it only if is_avrtest_log.
	Use get_mem to allocate heap.
	* options.c (USAGE): Document -h, --help.
	(usage) [fmt=NULL]: Show usage for --help etc. and exit 0.
	(parse_args): Silently support ?, -?, /?, -h, --help to show usage.
	* options.def: Reorder.
	* testavr.h: Include stdlib.h.
	(is_avrtest_log, get_mem): New protos.
	(EXIT_STATUS_FILE, EXIT_STATUS_MEMORY): New enum.

2014-10-09  Georg-Johann Lay  <avr@gjlay.de>

	Display function symbols from ELF when logging.
	New option -no-syms to switch that off.

	* options.def (-[no-]syms): New option.
	* testavr.h (program_size, io_base, log_set_func_symbol)
	(load_to_flash, decode_flash, set_function_symbol): New protos.
	* avr-insn.def (xmega): New pseudo insn.
	(XCH, LAS, LAC, LAT): Don't depend on ISA_XMEGA.
	* logging.c (func_symbol[]): New static array.
	(LEN_SYMBOL_STACK): New macro.
	(log_set_func_symbol, func_name): New functions.
	(perf_instruction): Factor out code to track call depth to...
	(set_call_depth): ...this new function.
	(log_add_instr): Use it.
	(log_init): Set RAM[MAX_RAM_SIZE-1] to 1.
	(log_dump_line): Typo.
	* avrtest.c (io_base): New const.
	(program_size): Make global.
	(set_function_symbol): New function.
	(xmega_atomic, func_XCH/LAC/LAS/LAT): Don't depend on ISA_XMEGA.
	Abort if !is_xmega.
	(main): Adjust calls to load_to_flash and decode_flash.